--- a/Website/templates/home.html
+++ b/Website/templates/home.html
@@ -1,1 +1,4 @@
-{% extends "index.html" %} {% block title %}ok{% endblock %}
+{% extends "index.html" %} {% block title %}School{% endblock %}
+{% block content %}
+<h1>This is a test</h1>
+{% endblock %}
