--- a/Website/templates/Index.HTML
+++ b/Website/templates/Index.HTML
@@ -45,6 +45,11 @@
     </div>
     </nav>
 
+    <div class="container">
+      {% block content %}
+      {% endblock %}
+    </div>
+
 
     
     <div class="Links">
