--- a/Website/templates/Index.HTML
+++ b/Website/templates/Index.HTML
@@ -3,8 +3,6 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content = "width=device-width, initial-scale=1"/>
-      <title> {% block title %}School{% endblock %} </title>
-      <link rel="stylesheet" href="Index.css" >
       <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -16,7 +14,7 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       crossorigin="anonymous"
     />
-
+    <title>{% block title %}Maybe{% endblock%}</title>
   </head>
   <body>
 
@@ -53,22 +51,22 @@
 
     
     <div class="Links">
-    <div class="Link1 rainbow-text"><a class="RAIN" href="Begin.html">Click Me To Begin</a></div>
-    <div class="Link2 rainbow-text"><a class="RAIN" href="Read.me">Clicke Me To Read How It Started</a></div>
-    <div class="Link3 rainbow-text"><a class="RAIN" href="window.close()">Click Me To Close</a></div>
-  </div>
-
-
+      <div class="Link1 rainbow-text"><a class="RAIN" href="Begin.html">Click Me To Begin</a></div>
+      <div class="Link2 rainbow-text"><a class="RAIN" href="Read.me">Clicke Me To Read How It Started</a></div>
+      <div class="Link3 rainbow-text"><a class="RAIN" href="window.close()">Click Me To Close</a></div>
+    </div>
   
-        <h5> <a class="Copyright" href="CopyrightLaws.html">&copy;	2021 Copyright</a></h5>
-
-
-     <div class="YouFoundMe"
-     data-hover="YOU FOUND MEEEEEEEEEEEEE">
-     
-     
-     Found Me Click Me</div>
-
+  
+    
+          <h5> <a class="Copyright" href="CopyrightLaws.html">&copy;	2021 Copyright</a></h5>
+  
+  
+       <div class="YouFoundMe"
+       data-hover="YOU FOUND MEEEEEEEEEEEEE">
+       
+       
+       Found Me Click Me</div>
+  
 
 
 
