--- a/Website/templates/home.html
+++ b/Website/templates/home.html
@@ -1,4 +1,2 @@
-{% extends "index.html" %} {% block title %}School{% endblock %}
-{% block content %}
-<h1>This is a test</h1>
-{% endblock %}
+{% extends "Index.html"%}
+{% block title %}lol{% endblock%}
