--- a/Website/templates/home.html
+++ b/Website/templates/home.html
@@ -1,2 +1,4 @@
-{% extends "Index.html"%}
-{% block title %}lol{% endblock%}
+{% extends "base.html"%}
+{% block header %}
+  <h1>{% block title %}Register{% endblock %}</h1>
+{% endblock %}
