--- a/Website/templates/home.html
+++ b/Website/templates/home.html
@@ -1,4 +1,3 @@
-{% extends "base.html"%}
-{% block header %}
-  <h1>{% block title %}Register{% endblock %}</h1>
-{% endblock %}
+{% extends 'base.html' %}
+  <h1>{% block title %}ples{% endblock %}</h1>
+
