--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -14,7 +14,7 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       crossorigin="anonymous"
     />
-    <title>{% block title %}Maybe{% endblock %}</title>
+    <title>{% block title %}Title{% endblock %}</title>
   </head>
   <body>
 
