--- a/Website/templates/home.html
+++ b/Website/templates/home.html
@@ -1,3 +1,8 @@
 {% extends 'base.html' %}
-  <h1>{% block title %}ples{% endblock %}</h1>
+{% block title %}Home{% endblock %}
+
+
+{% block content %}
+<h1>This Is the home page</h1>
+{% endblock %}
 
