--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -3,7 +3,33 @@
 
 
 {% block content %}
-<h1>This Is the Login page</h1>
-{{ text }}
+<form method="POST">
+    <h3 align="center">Login</h3>
+    <div class="form-group">
+        <label for="email">Email address</label>
+        <input 
+        type="email" 
+        class="form-control" 
+        id="email" 
+        name="email" 
+        placeholder="Enter email"
+        />
+
+
+    </div>
+<br>
+
+        <div class="form-group">
+            <label for="name">Enter Password</label>
+            <input 
+            type="password"                                                          
+            class="form-control" 
+            id="password1" 
+            name="password1" 
+            placeholder="Enter password"
+            />
+
+<br>
+<button type="submit" class="btn btn-primary">Login</button>
 {% endblock %}
 
