--- a/Website/templates/sign_up.html
+++ b/Website/templates/sign_up.html
@@ -1,8 +1,71 @@
 {% extends 'base.html' %}
 {% block title %}Sign up{% endblock %}
-
-
 {% block content %}
-<h1>This Is the sign up</h1>
+
+<form method="POST">
+    <h3 align="center">Sign Up</h3>
+    <div class="form-group">
+        <label for="email">Email address</label>
+        <input 
+        type="email" 
+        class="form-control" 
+        id="email" 
+        name="email" 
+        placeholder="Email"
+        />
+
+
+    </div>
+
+<br>
+
+    <div class="form-group">
+        <label for="name">Your name</label>
+        <input
+        type="text" 
+        class="form-control" 
+        id="name" 
+        name="name" 
+        placeholder="Name"
+        />
+<br>
+
+        <div class="form-group">
+            <label for="name">Enter Password</label>
+            <input 
+            type="password" 
+            class="form-control" 
+            id="password1" 
+            name="password1" 
+            placeholder="Enter password"
+            />
+   <br>
+            <div class="form-group">
+                <label for="name">Confirm password</label>
+                <input 
+                type="password" 
+                class="form-control" 
+                id="password2" 
+                name="password2" 
+                placeholder="Re-enter password"
+                />
+    </div>
+
+<br>
+<button type="submit" class="btn btn-primary">Submit Account</button>
+
+
+
+
+
+
+
+</form>
+
+
+
+
+
+
 {% endblock %}
 
