--- a/Website/templates/home.html
+++ b/Website/templates/home.html
@@ -4,5 +4,7 @@
 
 {% block content %}
 <h1>This Is the home page</h1>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<p>Content here</p>
 {% endblock %}
 
