--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -20,7 +20,7 @@
 <br>
 
         <div class="form-group">
-            <label for="name">Enter Password</label>
+            <label for="password">Enter Password</label>
             <input 
             type="password"                                                          
             class="form-control" 
