--- a/Website/templates/sign_up.html
+++ b/Website/templates/sign_up.html
@@ -31,7 +31,7 @@
 <br>
 
         <div class="form-group">
-            <label for="name">Enter Password</label>
+            <label for="password1">Enter Password</label>
             <input 
             type="password" 
             class="form-control" 
@@ -41,7 +41,7 @@
             />
    <br>
             <div class="form-group">
-                <label for="name">Confirm password</label>
+                <label for="password2">Confirm password</label>
                 <input 
                 type="password" 
                 class="form-control" 
