--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -30,12 +30,15 @@
     </button>
     <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
+          {% if user.is_authenticated %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="login" href="/login">Login Here</a>
-          <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           <a class="nav-item nav-link" id="some" href="/some">some</a>
-
+          {% else %}
+          <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+          <a class="nav-item nav-link" id="login" href="/login">Login Here</a>
+          <a class="nav-item nav-link" id="some" href="/some">some</a>
+          {% endif %}
         </div>
 
     </div>
