--- a/Website/templates/home.html
+++ b/Website/templates/home.html
@@ -1,10 +1,21 @@
 {% extends 'base.html' %}
 {% block title %}Home{% endblock %}
-
-
 {% block content %}
-<h1>This Is the home page</h1>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<p>Content here</p>
+
+<h1 align="center">Notes</h1>
+<ul class="list-group list-group-flush" id="notes">
+    {% for note in user.notes %}
+    <li class="list-group-item">{{ note.data}}</li>
+    {% endfor %}
+</ul>
+
+
+
+<form method="POST">
+    <textarea name="note" id="note" class="form-control"></textarea>
+    <div align="'center">
+        <button type="submit" class="btn btn-primary"> add note I guess</button>
+    </div>
+</form>
 {% endblock %}
 
