--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -24,8 +24,8 @@
             <input 
             type="password"                                                          
             class="form-control" 
-            id="password1" 
-            name="password1" 
+            id="password" 
+            name="password" 
             placeholder="Enter password"
             />
 
