--- a/Website/templates/home.html
+++ b/Website/templates/home.html
@@ -6,8 +6,8 @@
 <ul class="list-group list-group-flush" id="notes">
     {% for note in user.notes %}
     <li class="list-group-item">{{ note.data}}</li>
-        <button type="button" class="close" onClick="deleteNote({{ note.id }}">
-            <span aria-hidden="'true">&times;</span>
+        <button type="button" class="close" onClick="deleteNote({{ note.id }})">
+            <span aria-hidden="true">&times;</span>
         </button>
     {% endfor %}
 </ul>
@@ -17,7 +17,7 @@
 <form method="POST">
     <textarea name="note" id="note" class="form-control"></textarea>
     <br>
-    <div align="'center">
+    <div align="center">
         <button type="submit" class="btn btn-primary"> add note I guess</button>
     </div>
 </form>
